@@ -1,13 +1,11 @@
 package br.com.esign.qualidadearsmac.model;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Boletim {
 
     private String data;
     private List<Medicao> medicoes;
-    private List<Estacao> estacoes;
 
     public String getData() {
         return data;
@@ -26,7 +24,7 @@ public class Boletim {
     }
 
     public List<Estacao> getEstacoes() {
-        return this.medicoes.stream().map(m -> m.getEstacao()).collect(Collectors.toList());
+        return this.medicoes.stream().map(Medicao::getEstacao).toList();
     }
 
 }
